Changes for Perl extension SDL-Tutorial-3DWorld

0.16 to be released
	- Switch from manual GL display list code to OpenGL::List

0.15 Fri 17 Dec 2010
	- Because we can be fairly certain that TextureCube (i.e. crates)
	  will be popular, use that class to demonstrate the use of OpenGL
	  display lists via glGenLists(), glNewList(), and glCallList().
	- Noting that, of all things, glLineWidth() is insanely expensive.

0.14 Fri 17 Dec 2010
	- Actors are now rendered in random order to expose any places
	  where material property state management is being done badly.
	- Added some simple utility methods for getting paths to files
	  and directories in the share directory.
	- Added a TextureCube package for creating floor-origin rotatable
	  resizable cubes with the same (and correctly oriented) texture
	  on each face. Which is to say...
	- Fear the mighty Crate! Weep! Swoon!

0.13 Fri 17 Dec 2010
	- Factored the teapot-specific logic into a separate class
	- Added a new "grid cube" actor which demonstrates points, lines,
	  multiple element actors and grid-snapping for worlds which
	  inherently consist of a cube space (think original Wolfenstein).
	- When a texture is displayed it now inherently defends itself
	  against being altered by previous alpha channel settings of
	  other objects.
	- The 3dworld launcher now supports a --window option to disable
	  fullscreen in places where it's weird (like on my giant portrait
	  orientation monitors at $work)

0.12 Fri 17 Dec 2010
	- Increase default (only) resolution to 1024x768
	- Turned on double buffering to prevent mouselook flicker

0.11 Fri 17 Dec 2010
	- OpenGL::GL_LINEAR_MIPMAP_LINEAR definitely looks better, especially
	  when it has text on it.
	- Change the skybox overlap to a minimum amount for slightly tighter
	  welding of the skybox edges.
	- Change to 24 bit colour depth so we don't get colour gradient steps

0.10 Fri 17 Dec 2010
	- The three teapots now match the official colours for the three axis