@@ -2,6 +2,7 @@ Changes for Perl extension SDL-Tutorial-3DWorld
 
 0.16 to be released
 	- Switch from manual GL display list code to OpenGL::List
+	- Implemented left shift for "running"
 
 0.15 Fri 17 Dec 2010
 	- Because we can be fairly certain that TextureCube (i.e. crates)
